<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">


    <TextView
        android:id="@+id/cartHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/cart"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linlayTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:weightSum="1">

        <ListView
            android:id="@+id/itemView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_above="@id/linlayTotalPrice"
            android:layout_marginTop="15dp"></ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlayTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linlayTotal"
        android:layout_above="@id/linlayBottom">

        <Button
            android:id="@+id/btnClearCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/emptyCart"
            android:backgroundTint="@color/red"/>

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center_vertical|end"
            android:text="@string/totalPrice"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSumPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linlayBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnContinueShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/continueShop"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="@color/lightblue"/>

        <Button
            android:id="@+id/btnSendOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/sendOrder"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="@color/lightgreen"/>
    </LinearLayout>

</RelativeLayout>