<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainJames">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/mainjamesheader"></ImageView>


        <ImageButton
            android:id="@+id/header_burger_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/burgericon2" />

        <ImageButton
            android:id="@+id/header_shopping_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/carticon2"
            android:text="" />


        <LinearLayout
            android:id="@+id/textLinLayMain"
            android:layout_below="@id/header_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/main_james_offer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/main_offer_text"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/linlayMainJames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/main_james_offer_one"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/cappuccinooffer"
                    android:scaleType="centerCrop"
                    android:layout_marginRight="10dp"
                    />


                <ImageButton
                    android:id="@+id/main_james_offer_two"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/freshbageloffer"
                    android:scaleType="centerCrop"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlayOfferTexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_james_offerText_one"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/cappuccinoOffer"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/darkgreen"/>


                <TextView
                    android:id="@+id/main_james_offerText_two"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/bagelOffer"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/darkgreen"/>

            </LinearLayout>
        </LinearLayout>


        <FrameLayout
            android:id="@+id/fragment_mainJames"
            android:name="com.example.andy.thankyoujames.BurgerMenu"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

        </FrameLayout>
    </RelativeLayout>


</ScrollView>